--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,12 @@
 .big-container {
   display: flex;
   justify-content: center;
+  background: url("/img/A_time-lapse_view_of_Earth_from_the_Space_Station_from_Africa_to_Russia_pillars.png")
+    center center no-repeat;
+  background-size: cover;
+}
+canvas {
+  color: white;
 }
 .headAndChart {
   flex: 1 1 80%;
@@ -34,29 +40,45 @@ img:hover {
 
 .countries {
   display: flex;
+  height: 100vh;
   flex-direction: column;
   align-items: center;
   flex: 1 1 20%;
   margin-left: 1%;
-  justify-content: flex-start;
+  justify-content: space-around;
   margin-top: 1%;
+  background-color: rgb(184, 56, 67);
 }
 .regionName {
-  width: 90%;
+  width: 100%;
   padding: 2%;
   border: none;
-  background-color: rgb(238, 238, 115);
+  background-color: rgb(255, 255, 0);
   color: brown;
   font-size: 1.5rem;
   text-align: center;
 }
 select {
-  margin-top: 1%;
   padding: 3%;
   font-size: 1rem;
   width: 80%;
-  background-color: rgb(236, 171, 236);
-  color: white;
+  background-color: rgb(255, 255, 255);
+  color: blueviolet;
   border: none;
   border-radius: 10px;
+}
+.countryDetails {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 70%;
+  background-color: rgb(255, 255, 255);
+}
+
+.countryDetails .flag {
+  width: 50%;
+  height: 20%;
+  background-color: red;
 }
