--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,34 @@
+@import url("https://fonts.googleapis.com/css2?family=Barrio&family=Cabin:wght@500&family=Ewert&family=Fira+Code:wght@700&family=Metal+Mania&family=Sail&family=Secular+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amarante&family=Barrio&family=Cabin:wght@500&family=Ewert&family=Fira+Code:wght@700&family=Metal+Mania&family=Sail&family=Secular+One&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Cabin", sans-serif;
+  overflow: hidden;
 }
-.big-container {
-  display: flex;
-  justify-content: center;
+body {
   background: url("/img/A_time-lapse_view_of_Earth_from_the_Space_Station_from_Africa_to_Russia_pillars.png")
     center center no-repeat;
   background-size: cover;
+}
+.big-container {
+  height: 98vh;
+  display: flex;
+  justify-content: center;
+}
+.logo {
+  width: 100%;
+  height: 2%;
+  color: gold;
+  font-size: 3rem;
+  font-family: "Amarante", cursive;
+  background-color: none;
+  text-align: center;
+}
+.signature {
+  font-size: 1rem;
+  color: white;
 }
 canvas {
   color: white;
@@ -18,45 +37,50 @@ canvas {
   flex: 1 1 80%;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
 }
 .titles {
   display: flex;
   justify-content: center;
   margin: 2% 1%;
 }
-img {
+.circle {
   width: 10%;
   cursor: pointer;
   margin: 0 1%;
+  animation: circle 100s linear infinite;
 }
-img:hover {
-  transform: rotate(360deg);
-  transition: all 3s ease-in-out;
+@keyframes circle {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
+
 .chartContainer {
   display: flex;
   justify-content: center;
 }
 
 .countries {
-  display: flex;
+  display: none;
   height: 100vh;
   flex-direction: column;
   align-items: center;
   flex: 1 1 20%;
   margin-left: 1%;
-  justify-content: space-around;
   margin-top: 1%;
-  background-color: rgb(184, 56, 67);
 }
 .regionName {
   width: 100%;
   padding: 2%;
   border: none;
-  background-color: rgb(255, 255, 0);
-  color: brown;
-  font-size: 1.5rem;
+  color: gold;
+  font-size: 3rem;
   text-align: center;
+  z-index: 1;
 }
 select {
   padding: 3%;
@@ -74,11 +98,20 @@ select {
   align-items: center;
   width: 100%;
   height: 70%;
-  background-color: rgb(255, 255, 255);
+}
+.details {
+  font-size: 1rem;
+  text-align: center;
+  color: rgb(243, 231, 231);
 }
 
-.countryDetails .flag {
-  width: 50%;
+.countryDetails .details-flag {
+  margin: 2% 0;
+  overflow: hidden;
+  width: 70%;
   height: 20%;
-  background-color: red;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  border-radius: 10px;
 }
